--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack-dev-server --host 192.168.10.150 --port 8888 --open --config webpack.config.js"
+        "dev": "webpack-dev-server --host 192.168.10.150 --port 8888 --open --history-api-fallback --mode=development --config webpack.config.js"
     },
     "repository": {
         "type": "git",
@@ -36,6 +36,8 @@
         "webpack-dev-server": "^3.1.14"
     },
     "dependencies": {
-        "vue": "^2.5.21"
+        "prettier": "^1.12.1",
+        "vue": "^2.5.21",
+        "vue-router": "^3.0.2"
     }
 }
